--- a/css/style.css
+++ b/css/style.css
@@ -1173,10 +1173,15 @@ a.btn .btn_arrow {
     display: inline-block;
 }
 
+.titolo_big1 { font-size: 54px; color: #ff6900; margin-bottom: 5px; }
+.sottotitolo_big1 { font-size: 24px; color: #000; }
+.paragrafo_big1 { font-size: 20px; color: #000; line-height: 25px; margin: 0 auto 10px auto; }
+
 
 /* HOME - SPLASH */
-.splash-text .p1 { max-width: 510px; margin: 0 auto 10px auto; }
-.splash-text .p2 { max-width: 640px; margin: 0 auto 10px auto; }
+.splash-text p { margin: 0 auto 10px auto; } 
+.splash-text .p1 { max-width: 510px; }
+.splash-text .p2 { max-width: 640px; }
 a.btn .btn_box_home { background-color: #f42460; color: #fff; }
 a.btn:hover .btn_box_home { background-color: #fff; color: #f42460; }
 a.btn .btn_arrow_home { background: url('../img/btn/btn_base.png') no-repeat; }
@@ -1185,21 +1190,22 @@ a.btn:hover .btn_arrow_home { background: url('../img/btn/btn_hover_home.png') n
 
 /* MOSSA 1 */
 #fate-gruppo { background: url('../img/Sfondo_02_mossa1.jpg') repeat-x bottom; }
-#fate-gruppo p { color: #000; font-size: 20px; line-height: 25px; }
-#fate-gruppo .p3 { max-width: 690px; margin: 0 auto 10px auto; }
+#fate-gruppo .p3 { max-width: 690px; }
 #fate-gruppo .img-people { margin-bottom: 5px; }
 #fate-gruppo .separator { margin: 25px 0 0 0; }
-#fate-gruppo .titolo_m1 { color: #ff6900; font-size: 54px; margin-bottom: 5px; }
-#fate-gruppo .p_m1 { font-size: 24px; }
+#fate-gruppo .titolo_big1 { color: #ff6900; }
 a.btn .btn_box_m1 { background-color: #ff6900; color: #fff; }
 a.btn:hover .btn_box_m1 { background-color: #fff; color: #ff6900; }
 a.btn .btn_arrow_m1 { background: url('../img/btn/btn_base.png') no-repeat; }
 a.btn:hover .btn_arrow_m1 { background: url('../img/btn/btn_hover_mossa1.png') no-repeat; }
 
 
-
-
-
+/* MOSSA 2 */
+#chiarite-idee { background: url('../img/Sfondo_03_mossa2_modulo.jpg') repeat; }
+#chiarite-idee .titolo_big1 { color: #0028ff; }
+#chiarite-idee .separator { margin: 15px 0 0 0; }
+#chiarite-idee .p4 { max-width: 690px; }
+#chiarite-idee .evidenzia { color: #0028ff;}
 
 
 
@@ -1474,3 +1480,242 @@ a.btn:hover .btn_arrow_m1 { background: url('../img/btn/btn_hover_mossa1.png') n
         width: 22%;
     }
 }
+
+
+/*******************************************************************************
+-------- --------- INTEGRATE ORIGINAL COLORS.CSS -------------------------------
+*******************************************************************************/
+
+body {
+    background-color: #f3f3f3;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #6d6d6d;
+    font-family: 'Ultra', sans-serif;
+}
+
+p {
+    color: #6d6d6d;
+}
+
+/*heading border*/
+
+.m-heading-border {
+    background-color: #62b7a4;
+}
+
+/* SPLASH IMAGE */
+
+.m-splash-image {
+    color: #000;
+}
+
+.m-splash-image p {
+    color: #000;
+    font-size: 20px;
+    line-height: 25px;
+}
+
+.m-splash-image h1 {
+    color: #fff;
+}
+
+/* read more button in splash image*/
+
+.m-splash-image a {
+    color: #fff;
+}
+
+/*navigation*/
+
+.l-navigation-wrap {
+    background-color: #3c434b;
+}
+
+.navbar-default .navbar-nav>.active>a {
+    color: #ffe600;
+}
+
+.paralax-section1 h1, .paralax-section1 h2, .paralax-section1 h3, .paralax-section1 h4, .paralax-section1 h5, .paralax-section1 h6,  {
+    color: #f1c40f;
+}
+
+.l-paralax-section, .l-paralax-section p {
+    color: #fff;
+}
+
+.what-we-do-section h6 {
+    color: #fff;
+}
+
+.what-we-do-section h4 {
+    color: #f1c40f;
+}
+
+/* News content */
+
+.news-content h6 a {
+    color: #454545;    
+}
+
+.news-content h6 a:hover {    
+    color: #1abc9c;    
+}
+
+.news-button {
+    background-color: #1abc9c;
+    border: 1px solid #1abc9c;
+    color: #fff;
+}
+
+.news-button:hover {
+    background-color: transparent;
+    color: #1abc9c;    
+}
+
+.image-hover .categories a, .image-hover .categories {
+    color: #fff;
+}
+
+.categories .m-heading-border {
+    background-color: #fff;
+}
+
+.post-comments, .post-date  {
+    color: #fff;
+}
+
+/* TESTIMONIALS SLIDER */
+
+.flex-control-paging li a:hover, .flex-control-paging li a.flex-active {
+    border: 2px solid #62b7a4;
+    background-color: transparent;
+}
+
+.testimonials-paralax h4 {
+    color: #fff;
+}
+
+/* TECHNICAL SKILLS SECTION */
+
+.l-skills-section {
+    background-color: #1abc9c;
+}
+
+.l-skills-section h1 , .l-skills-section p, .l-skills-section h2, .l-skills-section h3, .l-skills-section h4, .l-skills-section h5, .l-skills-section h6 {
+    color: #fff;
+}
+
+.l-skills-section .m-heading-border {
+    background-color: #fff;
+}
+
+
+/* gallery section */
+
+.l-gallery-categories ul li:hover {
+    background-color: #d66969;
+    border: 1px solid #d66969;
+    color: #fff;
+    cursor: pointer;
+}
+
+.l-gallery-section .m-heading-border {
+    background-color: #d66969;
+}
+
+.l-gallery-section {
+    padding-bottom: 0;
+}
+
+.gallery-post h1, .gallery-post h2, .gallery-post h3, .gallery-post h4, .gallery-post h5, .gallery-post h6, .gallery-post p {
+    color: #fff;
+} 
+
+.gallery-post p {
+    font-style: italic;
+}
+
+/* team section */
+
+.l-team-section {
+    background-color: #e74c3c;
+    color: #fff;
+}
+
+.l-team-section h1, .l-team-section h2, .l-team-section h3, .l-team-section h4, .l-team-section h5, .l-team-section h6, .l-team-section p {
+    color: #fff;
+}
+
+.l-team-section .m-heading-border {
+    background-color: #fff;
+}
+
+.member-description {
+    background-color: #fff;
+}
+
+.member-description p {
+    color: #454545;
+}
+
+.team-social-icons a {
+    border: 1px solid #e74c3c;
+    color: #e74c3c;
+}
+
+.team-social-icons a:hover {        
+        color: #fff;
+        background-color: #e74c3c;
+}
+
+
+
+/* TWITTER SECTION */
+
+.m-twitter-logo {
+    background-color: #1baf92;
+    color: #fff;
+    border: 2px solid #1baf92;
+}
+
+.m-twitter-logo:hover {
+    background-color: transparent;
+    border: 2px solid #1baf92;
+}
+
+.m-twitter-logo i {
+    color: #fff;
+}
+
+.l-twitter-section a {
+    color: #1abc9c;
+}
+
+.l-contactus-section {
+    background-color: #34495e;
+    color: #fff;
+}
+
+.form-button {
+    background-color: #f36363;
+    border: none;
+    border: 2px solid #f36363;
+    transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+}
+
+.form-button:hover {
+    background-color: transparent;
+}
+
+
+.l-map-section .m-heading-border {
+    background-color: #d66969;
+}
+
+.l-contactus-section h1, .l-contactus-section h2, .l-contactus-section h3, .l-contactus-section h4, .l-contactus-section h5, .l-contactus-section h6 {
+    color: #fff;
+} 
