--- a/css/style.css
+++ b/css/style.css
@@ -940,11 +940,7 @@ h2 {
 
 .team-member-image {
     margin-bottom: 20px;
-    width: 85%;
-    border: 8px solid #fff;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
+    width: 70%;
 }
 
 .team-social-icons {
@@ -1185,10 +1181,9 @@ a.btn:hover .btn_box_home { background-color: #fff; color: #f42460; }
 a.btn .btn_arrow_home { background: url('../img/btn/btn_base.png') no-repeat; }
 a.btn:hover .btn_arrow_home { background: url('../img/btn/btn_hover_home.png') no-repeat; }
 
-
 /* MOSSA 1 */
 #fate-gruppo { background: url('../img/Sfondo_02_mossa1.jpg') repeat-x bottom; }
-#fate-gruppo .p3 { max-width: 690px; }
+#fate-gruppo .pm1 { max-width: 690px; }
 #fate-gruppo .img-people { margin-bottom: 5px; }
 #fate-gruppo .separator { margin: 25px 0 0 0; }
 #fate-gruppo .titolo_big1 { color: #ff6900; }
@@ -1197,24 +1192,45 @@ a.btn:hover .btn_box_m1 { background-color: #fff; color: #ff6900; }
 a.btn .btn_arrow_m1 { background: url('../img/btn/btn_base.png') no-repeat; }
 a.btn:hover .btn_arrow_m1 { background: url('../img/btn/btn_hover_mossa1.png') no-repeat; }
 
-
 /* MOSSA 2 */
 #chiarite-idee { background: url('../img/Sfondo_03_mossa2_modulo.jpg') repeat; }
 #chiarite-idee .titolo_big1 { color: #0028ff; }
 #chiarite-idee .separator { margin: 15px 0 0 0; }
-#chiarite-idee .p4 { max-width: 630px; }
+#chiarite-idee .pm2 { max-width: 630px; }
 #chiarite-idee .evidenzia { color: #0028ff;}
 a.btn .btn_box_m2 { background-color: #0028ff; color: #fff; }
 a.btn:hover .btn_box_m2 { background-color: #fff; color: #0028ff; }
 a.btn .btn_arrow_m2 { background: url('../img/btn/btn_base.png') no-repeat; }
 a.btn:hover .btn_arrow_m2 { background: url('../img/btn/btn_hover_mossa2.png') no-repeat; }
 
+/* MOSSA 3 */
+#cosa-comprare { background: url('../img/Sfondo_04_mossa3_modulo.png') repeat; } 
+#cosa-comprare .titolo_big1 { color: #d7272f; }
+#cosa-comprare .separator { margin: 15px 0 0 0; }
+#cosa-comprare .pm3 { max-width: 475px; }
+a.btn .btn_box_m3 { background-color: #d7272f; color: #fff; }
+a.btn:hover .btn_box_m3 { background-color: #fff; color: #d7272f; }
+a.btn .btn_arrow_m3 { background: url('../img/btn/btn_base.png') no-repeat; }
+a.btn:hover .btn_arrow_m3 { background: url('../img/btn/btn_hover_mossa3.png') no-repeat; }
+#cosa-comprare h5 { font-family: 'Titillium Web', sans-serif; font-size: 20px; color: #000; }
+
+/* MOSSA 4 */
+#altri-gas { background: url('../img/Sfondo_05_mossa4.jpg') center; } 
+#altri-gas .titolo_big1 { color: #009500; }
+#altri-gas .separator { margin: 15px 0 0 0; }
+#altri-gas .pm4 { max-width: 475px; }
+a.btn .btn_box_m4 { background-color: #009500; color: #fff; }
+a.btn:hover .btn_box_m4 { background-color: #fff; color: #009500; }
+a.btn .btn_arrow_m4 { background: url('../img/btn/btn_base.png') no-repeat; }
+a.btn:hover .btn_arrow_m4 { background: url('../img/btn/btn_hover_mossa4.png') no-repeat; }
+#altri-gas h5 { font-family: 'Titillium Web', sans-serif; font-size: 18px; color: #000; }
+#altri-gas .des-button { width: 295px; border: 3px solid #009500; color: #009500;}
+#altri-gas .des-button:hover { background-color: #009500; color: #fff;}
 
 
 
 
 /* RESPONSIVE */
-
 
 @media (max-width: 980px) {
     .navbar-header {
@@ -1610,7 +1626,7 @@ p {
 }
 
 .l-skills-section h1 , .l-skills-section p, .l-skills-section h2, .l-skills-section h3, .l-skills-section h4, .l-skills-section h5, .l-skills-section h6 {
-    color: #fff;
+    color: #000;
 }
 
 .l-skills-section .m-heading-border {
