Added FERMENTO NATURALE in mossa 6

--- a/css/style.css
+++ b/css/style.css
@@ -1263,7 +1263,7 @@ a.btn:hover .btn_arrow_m6 { background: url('../img/btn/btn_hover_mossa6.png') n
 #continuate .ghirba { background-color: #e75b56; }
 #continuate .terre-re { background-color: #b68f48; }
 #continuate .acquabenecomune { background-color: #00dafc; }
-
+#continuate .fermentonaturale { background-color: #cc73f0; }
 
 
 /* RESPONSIVE */
