--- a/css/style.css
+++ b/css/style.css
@@ -1157,6 +1157,11 @@ h2 {
 */
 
 /** GENERAL BUTTON */
+a {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+
 a.btn .btn_box  {
     font-size: 20px;
     padding: 3px 11px;
@@ -1234,7 +1239,7 @@ a.btn:hover .btn_arrow_m4 { background: url('../img/btn/btn_hover_mossa4.png') n
 #altri-gas h5 { font-family: 'Titillium Web', sans-serif; font-size: 18px; color: #000; line-height: 21px; margin-top: 6px; }
 #altri-gas .des-button { width: 295px; border: 3px solid #008c00; color: #008c00; }
 #altri-gas .des-button:hover { background-color: #008c00; color: #fff; }
-#altri-gas .col-lg-2, #altri-gas .col-md-2, #altri-gas .col-sm-2 { width: 20%; }
+#altri-gas .col-xs-12 { margin-bottom: 16px; }
 
 /* MOSSA 5 */
 #primo-ordine { background: url('../img/Sfondo_06_mossa5.jpg') center; } 
