--- a/css/style.css
+++ b/css/style.css
@@ -1161,6 +1161,7 @@ a {
     color: rgb(0, 0, 0);
     text-decoration: underline;
 }
+a:hover { color: rgb(255, 255, 255); }
 
 a.btn .btn_box  {
     font-size: 20px;
