--- a/css/style.css
+++ b/css/style.css
@@ -1240,7 +1240,7 @@ a.btn:hover .btn_box_m4 { background-color: #fff; color: #008c00; }
 a.btn .btn_arrow_m4 { background: url('../img/btn/btn_base.png') no-repeat; }
 a.btn:hover .btn_arrow_m4 { background: url('../img/btn/btn_hover_mossa4.png') no-repeat; }
 #altri-gas h5 { font-family: 'Titillium Web', sans-serif; font-size: 18px; color: #000; line-height: 21px; margin-top: 6px; }
-#altri-gas .des-button { width: 295px; border: 3px solid #008c00; color: #008c00; }
+#altri-gas .des-button { width: 295px; border: 3px solid #008c00; color: #008c00; text-decoration: none; }
 #altri-gas .des-button:hover { background-color: #008c00; color: #fff; }
 #altri-gas .col-xs-12 { margin-bottom: 16px; }
 
