Empty color for gallery

--- a/css/style.css
+++ b/css/style.css
@@ -1272,6 +1272,7 @@ a.btn:hover .btn_arrow_m6 { background: url('../img/btn/btn_hover_mossa6.png') n
 #continuate .terre-re { background-color: #b68f48; }
 #continuate .acquabenecomune { background-color: #00dafc; }
 #continuate .fermentonaturale { background-color: #cc73f0; }
+#continuate .empty { background-color: rgb(182,183,188); }
 
 /* CONTATTI */
 #contatti  { background: url('../img/Sfondo_07_contatti_modulo.png') repeat; } 
